--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,1010 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@100&family=Space+Mono:ital,wght@0,400;0,700;1,700&display=swap");
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  border: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  margin: 0%;
+  width: 100%;
+  height: 100vh;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
+
+.home {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("public/sal.jpg");
+  background-position: 10% 30%;
+  width: 100%;
+  height: 911px;
+  background-attachment: fixed;
+}
+
+.List {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  gap: 10%;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  margin-top: 10px;
+  top: 0;
+  transition: all 0.1s ease-in-out;
+  z-index: 1000;
+  color: #fff;
+}
+
+.List.scrolled {
+  justify-content: space-around;
+  top: 8px;
+  gap: 9%;
+}
+
+.List.scrolled img {
+  display: block;
+}
+
+.List img {
+  display: none;
+  width: 100px;
+  height: auto;
+}
+
+@media (width > 980px) {
+  .List {
+    top: 0.5rem;
+    mix-blend-mode: difference;
+  }
+}
+
+a {
+  color: #e8e8e8e0;
+  text-decoration: none;
+}
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.slide_1 {
+  display: flex;
+  align-items: center;
+  justify-content: baseline;
+  margin-left: 2%;
+}
+
+span {
+  margin-top: 250px;
+}
+
+.texto {
+  color: white;
+  font-size: 100px;
+  font-weight: 600;
+}
+
+.first-text {
+  color: #d4a017;
+}
+
+.escritura {
+  color: white;
+  font-size: 100px;
+  font-weight: 600;
+  margin-left: 2%;
+}
+
+.typed-cursor {
+  color: white;
+  text-align: center;
+  font-size: 100px;
+}
+
+.segunda_parte {
+  background-color: #ffffff;
+  width: 100%;
+  height: 950px;
+}
+
+.sobre_mi {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  font-style: normal;
+  height: 80px;
+  width: 245px;
+  margin-top: 5%;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+}
+
+.descripcion {
+  height: 30%;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 155%;
+  font-style: normal;
+  width: 90%;
+  text-align: center;
+}
+
+.linea {
+  background-image: url("public/acento-circunflejo.png");
+  display: flex;
+  justify-self: center;
+  width: 50px;
+  height: 50px;
+  background-size: 100%;
+}
+
+.logos {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  gap: 10%;
+}
+
+.logo img {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  position: relative;
+  width: 15%;
+  height: 200px;
+}
+
+.skills {
+  width: 100%;
+  max-width: 400px;
+  padding: 75% 1px;
+}
+
+.skill-name {
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
+  text-transform: uppercase;
+  margin: 20px 0;
+}
+
+.skill-bar {
+  height: 14px;
+  background-color: #dbd4d438;
+  border-radius: 3px;
+}
+
+.skill-per {
+  height: 14px;
+  background-color: rgb(0, 0, 0);
+  border-radius: 3px;
+  position: relative;
+  animation: fillBars 2.5s 1;
+  width: 0;
+}
+
+.skill-per::before {
+  content: attr(per);
+  position: absolute;
+  padding: 4px 6px;
+  background: rgb(0, 0, 0);
+  border-radius: 4px;
+  font-size: 12px;
+  top: 25px;
+  right: 0;
+  transform: translateX(50%);
+  color: white;
+}
+
+.skill-per::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(0, 0, 0);
+  top: 20px;
+  right: 0;
+  transform: translateX(50%) rotate(45deg);
+  border-radius: 2px;
+  border-color: rgb(55, 0, 255);
+}
+
+.tercera_parte {
+  background-color: #000000;
+  width: 100%;
+  height: 950px;
+  display: flex;
+  color: white;
+}
+.proyectos {
+  width: 100%;
+  gap: 1%;
+  background-size: 200%;
+}
+
+.proyectos_des {
+  display: flex;
+  width: 100%;
+  font-size: 30px;
+  color: #ffffff;
+  justify-content: center;
+  align-self: center;
+}
+
+.proyectos_des_back {
+  width: 70%;
+  font-size: 100%;
+  text-align: center;
+}
+
+.tercer_titulo {
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+
+  text-shadow: rgb(0, 0, 0) 0 4px;
+}
+
+.ventanas {
+  width: 100%;
+  height: 67%;
+  margin-top: 15%;
+  display: flex;
+  justify-content: center;
+  gap: 5%;
+  position: absolute;
+}
+.v {
+  width: 23%;
+  border-radius: 20px;
+  transition: transform 0.3s ease;
+  border: 2px solid white;
+}
+.v:hover {
+  transform: scale(1.1); /* Escala la imagen al pasar el mouse */
+}
+
+.tres {
+  background-image: url("public/Jam.jpeg");
+  background-position: 42% 80%;
+  background-size: 200%;
+}
+
+.dos {
+  background-image: url("public/web.jpg");
+  background-position: 50% 40%;
+  background-size: 110%;
+}
+
+.uno {
+  background-image: url("public/microcontrolador.jpg");
+  background-size: 80%;
+  background-position: 52% 60%;
+}
+
+.cuarta_parte {
+  width: 100%;
+  height: 950px;
+  background-color: white;
+}
+
+@media (max-width: 532px) {
+  .List {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    width: 100%;
+    margin-top: 20px;
+    top: 0;
+    transition: all 0.1s ease-in-out;
+    z-index: 1000;
+  }
+
+  .List.scrolled {
+    justify-content: space-around;
+    top: -20px;
+    gap: 2px;
+    width: 100%;
+    height: 20px;
+    background-color: rgba(63, 57, 57, 0.342);
+  }
+
+  .List.scrolled img {
+    display: block;
+  }
+
+  .List img {
+    display: none;
+    width: 10px;
+    height: auto;
+  }
+
+  .home {
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.185),
+        rgba(0, 0, 0, 0.226)
+      ),
+      url("public/celulares.jpg");
+    width: 100%;
+    height: 849px;
+    background-size: 140%;
+  }
+
+  .first-text {
+    color: #ff8c42;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  }
+  .escritura {
+    color: white;
+    font-size: 50px;
+    font-weight: 600;
+
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  }
+  .texto {
+    font-size: 100px;
+    font-weight: 600;
+  }
+  .slide_1 {
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    margin-top: 100px;
+    width: 100%;
+  }
+
+  .segunda_parte {
+    width: 100%;
+    height: 845px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .sobre_mi {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 150%;
+    font-style: normal;
+    height: 80px;
+    width: 43%;
+    margin-top: 8%;
+  }
+
+  .descripcion {
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 120%;
+    font-style: normal;
+    width: 100%;
+    text-align: center;
+    margin-top: 6%;
+  }
+  .logos {
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+    gap: 60%;
+  }
+
+  .logo img {
+    width: 80px;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .tercera_parte {
+    background-color: #000000;
+    width: 100%;
+    height: 849px;
+  }
+  .skills {
+    width: 100%;
+    padding: 450% 1px;
+  }
+  .skill-per::before {
+    content: attr(per);
+    position: absolute;
+    padding: 4px 6px;
+    background: rgb(0, 0, 0);
+    border-radius: 4px;
+    font-size: 12px;
+    top: 25px;
+    right: 0;
+    transform: translateX(50%);
+    color: white;
+  }
+
+  .skill-per::after {
+    content: "";
+    position: absolute;
+    width: 60%;
+    height: 10px;
+    background-color: rgb(0, 0, 0);
+    top: 20px;
+    right: 0;
+    transform: translateX(50%) rotate(45deg);
+    border-radius: 2px;
+    border-color: rgb(55, 0, 255);
+  }
+  .tercera_parte {
+    background-color: #000000;
+    width: 100%;
+    height: 950px;
+    display: flex;
+    color: white;
+  }
+  .proyectos {
+    width: 100%;
+    gap: 1%;
+    background-size: 200%;
+  }
+
+  .proyectos_des {
+    display: flex;
+    width: 100%;
+    font-size: 30px;
+    color: #ffffff;
+    justify-content: center;
+    align-self: center;
+  }
+
+  .proyectos_des_back {
+    width: 70%;
+    font-size: 100%;
+    text-align: center;
+  }
+
+  .tercer_titulo {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+
+    text-shadow: rgb(0, 0, 0) 0 4px;
+  }
+
+  .ventanas {
+    width: 100%;
+    height: 60%;
+    margin-top: 15%;
+    gap: 5%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 80%;
+  }
+  .v {
+    width: 73%;
+    height: 50%;
+    border-radius: 20px;
+    border-style: solid;
+    transition: transform 0.3s ease;
+    display: flex;
+    justify-content: center;
+  }
+  .v:hover {
+    transform: scale(1.1); /* Escala la imagen al pasar el mouse */
+  }
+
+  .tres {
+    background-image: url("public/Jam.jpeg");
+    background-position: 42% 80%;
+    background-size: 200%;
+  }
+
+  .dos {
+    background-image: url("public/web.jpg");
+    background-position: 50% 40%;
+    background-size: 110%;
+  }
+
+  .uno {
+    background-image: url("public/microcontrolador.jpg");
+    background-size: 80%;
+    background-position: 52% 60%;
+  }
+
+  .cuarta_parte {
+    width: 100%;
+    height: 950px;
+    background-color: white;
+  }
+}
+@media (min-width: 533px) and (max-width: 859px) {
+  .home {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("public/sal.jpg");
+    background-position: 10% 30%;
+    width: 100%;
+    height: 911px;
+    background-attachment: fixed;
+  }
+
+  .List {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    margin-top: 10px;
+    top: 0;
+    transition: all 0.1s ease-in-out;
+    z-index: 1000;
+    color: #fff;
+  }
+
+  .List.scrolled {
+    justify-content: space-around;
+    top: 8px;
+    gap: 9%;
+  }
+
+  .List.scrolled img {
+    display: block;
+  }
+
+  .List img {
+    display: none;
+    width: 100px;
+    height: auto;
+  }
+
+  @media (width > 980px) {
+    .List {
+      top: 0.5rem;
+      mix-blend-mode: difference;
+    }
+  }
+
+  a {
+    color: #e8e8e8e0;
+    text-decoration: none;
+  }
+  h1 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+
+  .slide_1 {
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    margin-top: 250px;
+    margin-left: 2%;
+  }
+
+  .texto {
+    color: white;
+    font-size: 100px;
+    font-weight: 600;
+  }
+
+  .first-text {
+    color: #d4a017;
+  }
+
+  .escritura {
+    color: white;
+    font-size: 100px;
+    font-weight: 600;
+    margin-left: 2%;
+  }
+
+  .typed-cursor {
+    color: white;
+    text-align: center;
+    font-size: 100px;
+  }
+  .slide_1 {
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    margin-top: 100px;
+    width: 100%;
+  }
+
+  .segunda_parte {
+    width: 100%;
+    height: 845px;
+  }
+
+  .sobre_mi {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    font-style: normal;
+    height: 80px;
+    width: 245px;
+    margin-top: 2%;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+  }
+
+  .descripcion {
+    height: 40%;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    font-style: normal;
+    width: 80%;
+    text-align: center;
+  }
+  .logos {
+    display: flex;
+    justify-content: center;
+    margin-top: 8%;
+    gap: 5%;
+  }
+
+  .logo img {
+    width: 80%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .tercera_parte {
+    width: 100%;
+    height: 849px;
+  }
+  .skills {
+    width: 100%;
+    max-width: 600px;
+    padding: 70% 1px;
+  }
+
+  .tercera_parte {
+    background-color: #000000;
+    width: 100%;
+    height: 950px;
+    display: flex;
+    color: white;
+    justify-content: center;
+  }
+  .proyectos {
+    width: 100%;
+    gap: 1%;
+    background-size: 200%;
+  }
+
+  .proyectos_des {
+    display: flex;
+    width: 100%;
+    font-size: 30px;
+    color: #ffffff;
+    justify-content: center;
+    align-self: center;
+  }
+
+  .proyectos_des_back {
+    width: 70%;
+    font-size: 100%;
+    text-align: center;
+  }
+
+  .tercer_titulo {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+
+    text-shadow: rgb(0, 0, 0) 0 4px;
+  }
+
+  .ventanas {
+    width: 90%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40%;
+  }
+  .v {
+    display: flex;
+    width: 63%;
+    height: 85%;
+    border-radius: 20px;
+    border-style: solid;
+    transition: transform 0.3s ease;
+  }
+  .v:hover {
+    transform: scale(1.1);
+  }
+
+  .tres {
+    background-image: url("public/Jam.jpeg");
+    background-position: 42% 80%;
+    background-size: 200%;
+  }
+
+  .dos {
+    background-image: url("public/web.jpg");
+    background-position: 50% 40%;
+    background-size: 100%;
+  }
+
+  .uno {
+    background-image: url("public/microcontrolador.jpg");
+    background-size: 80%;
+    background-position: 52% 60%;
+  }
+}
+@media (min-width: 860px) and (max-width: 900px) {
+  .home {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("public/sal.jpg");
+    background-position: 10% 30%;
+    width: 100%;
+    height: 911px;
+    background-attachment: fixed;
+  }
+
+  .List {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    margin-top: 10px;
+    top: 0;
+    transition: all 0.1s ease-in-out;
+    z-index: 1000;
+    color: #fff;
+  }
+
+  .List.scrolled {
+    justify-content: space-around;
+    top: 8px;
+    gap: 9%;
+  }
+
+  .List.scrolled img {
+    display: block;
+  }
+
+  .List img {
+    display: none;
+    width: 100px;
+    height: auto;
+  }
+
+  @media (width > 980px) {
+    .List {
+      top: 0.5rem;
+      mix-blend-mode: difference;
+    }
+  }
+
+  a {
+    color: #e8e8e8e0;
+    text-decoration: none;
+  }
+  h1 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+
+  .slide_1 {
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    margin-top: 250px;
+    margin-left: 2%;
+  }
+
+  .texto {
+    color: white;
+    font-size: 100px;
+    font-weight: 600;
+  }
+
+  .first-text {
+    color: #d4a017;
+  }
+
+  .escritura {
+    color: white;
+    font-size: 100px;
+    font-weight: 600;
+    margin-left: 2%;
+  }
+
+  .typed-cursor {
+    color: white;
+    text-align: center;
+    font-size: 100px;
+  }
+  .slide_1 {
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    margin-top: 100px;
+    width: 100%;
+  }
+
+  .segunda_parte {
+    width: 100%;
+    height: 845px;
+  }
+
+  .sobre_mi {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    font-style: normal;
+    height: 80px;
+    width: 245px;
+    margin-top: 2%;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+  }
+
+  .descripcion {
+    height: 40%;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    font-style: normal;
+    width: 80%;
+    text-align: center;
+  }
+  .logos {
+    display: flex;
+    justify-content: center;
+    margin-top: 8%;
+    gap: 5%;
+  }
+
+  .logo img {
+    width: 80%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .tercera_parte {
+    width: 100%;
+    height: 849px;
+  }
+  .skills {
+    width: 100%;
+    max-width: 600px;
+    padding: 70% 1px;
+  }
+
+  .tercera_parte {
+    background-color: #000000;
+    width: 100%;
+    height: 950px;
+    display: flex;
+    color: white;
+    justify-content: center;
+  }
+  .proyectos {
+    width: 100%;
+    gap: 1%;
+    background-size: 200%;
+  }
+
+  .proyectos_des {
+    display: flex;
+    width: 100%;
+    font-size: 30px;
+    color: #ffffff;
+    justify-content: center;
+    align-self: center;
+  }
+
+  .proyectos_des_back {
+    width: 70%;
+    font-size: 100%;
+    text-align: center;
+  }
+
+  .tercer_titulo {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+
+    text-shadow: rgb(0, 0, 0) 0 4px;
+  }
+
+  .ventanas {
+    width: 90%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20%;
+  }
+  .v {
+    display: flex;
+    width: 63%;
+    height: 85%;
+    border-radius: 20px;
+    border-style: solid;
+    transition: transform 0.3s ease;
+  }
+  .v:hover {
+    transform: scale(1.1);
+  }
+
+  .tres {
+    background-image: url("public/Jam.jpeg");
+    background-position: 42% 80%;
+    background-size: 200%;
+  }
+
+  .dos {
+    background-image: url("public/web.jpg");
+    background-position: 50% 40%;
+    background-size: 100%;
+  }
+
+  .uno {
+    background-image: url("public/microcontrolador.jpg");
+    background-size: 80%;
+    background-position: 52% 60%;
+  }
 }
