--- a/src/index.css
+++ b/src/index.css
@@ -236,13 +236,12 @@ span {
 .tercera_parte {
   background-color: #000000;
   width: 100%;
-  height: 950px;
+  height: 50vw;
   display: flex;
   color: white;
 }
 .proyectos {
   width: 100%;
-  gap: 1%;
   background-size: 200%;
 }
 
@@ -262,7 +261,7 @@ span {
 }
 
 .tercer_titulo {
-  margin-top: 5%;
+  margin-top: 2%;
   display: flex;
   justify-content: center;
   font-size: 40px;
@@ -272,13 +271,14 @@ span {
 
 .ventanas {
   width: 100%;
-  height: 67%;
+  height: 100%;
   margin-top: 15%;
   display: flex;
   justify-content: center;
   gap: 5%;
   position: absolute;
 }
+/*
 .v {
   width: 23%;
   border-radius: 20px;
@@ -286,8 +286,10 @@ span {
   border: 2px solid white;
 }
 .v:hover {
-  transform: scale(1.1); /* Escala la imagen al pasar el mouse */
+  transform: scale(1.1);
 }
+  
+
 
 .tres {
   background-image: url("/Jam.jpeg");
@@ -306,6 +308,7 @@ span {
   background-size: 80%;
   background-position: 52% 60%;
 }
+*/
 
 .cuarta_parte {
   width: 100%;
@@ -491,7 +494,7 @@ span {
     text-align: center;
   }
 
-  .tercer_titulo {
+  /*.tercer_titulo {
     margin-top: 5%;
     display: flex;
     justify-content: center;
@@ -499,7 +502,7 @@ span {
 
     text-shadow: rgb(0, 0, 0) 0 4px;
   }
-
+*/
   .ventanas {
     width: 100%;
     height: 60%;
@@ -716,7 +719,7 @@ span {
     gap: 1%;
     background-size: 200%;
   }
-
+  /*
   .proyectos_des {
     display: flex;
     width: 100%;
@@ -731,6 +734,7 @@ span {
     font-size: 100%;
     text-align: center;
   }
+  */
 
   .tercer_titulo {
     margin-top: 5%;
