--- a/src/Components/itembox.css
+++ b/src/Components/itembox.css
@@ -2,3 +2,10 @@
   display: flex;
   height: 80%;
 }
+@media screen and (max-width: 1525px) {
+  .Container {
+    display: flex;
+    flex-direction: column;
+    background-color: red;
+  }
+}
