--- a/src/Components/projects.css
+++ b/src/Components/projects.css
@@ -23,8 +23,16 @@
   border-width: 10px;
   overflow: hidden;
 }
-img {
+.card img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  aspect-ratio: 4 / 3;
+}
+@media screen and (max-width: 1525px) {
+  .card {
+    width: 50%;
+    height: 75%;
+    background-color: green;
+  }
 }
