--- a/src/index.css
+++ b/src/index.css
@@ -236,7 +236,7 @@ span {
 .tercera_parte {
   background-color: #000000;
   width: 100%;
-  height: 50vw;
+  height: 110vh;
   display: flex;
   color: white;
 }
@@ -276,6 +276,7 @@ span {
   justify-content: center;
   gap: 5%;
   position: absolute;
+  align-items: center;
 }
 /*
 .v {
@@ -313,6 +314,15 @@ span {
   width: 100%;
   height: 950px;
   background-color: white;
+}
+@media screen and (max-width: 1525px) {
+  .ventanas {
+    height: 82%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15%;
+  }
 }
 
 @media (max-width: 532px) {
@@ -431,11 +441,6 @@ span {
     transform: translate(-50%, -50%);
   }
 
-  .tercera_parte {
-    background-color: #000000;
-    width: 100%;
-    height: 849px;
-  }
   .skills {
     width: 100%;
     padding: 450% 1px;
@@ -465,13 +470,7 @@ span {
     border-radius: 2px;
     border-color: rgb(55, 0, 255);
   }
-  .tercera_parte {
-    background-color: #000000;
-    width: 100%;
-    height: 950px;
-    display: flex;
-    color: white;
-  }
+
   .proyectos {
     width: 100%;
     gap: 1%;
@@ -654,24 +653,12 @@ span {
     transform: translate(-50%, -50%);
   }
 
-  .tercera_parte {
-    width: 100%;
-    height: 849px;
-  }
   .skills {
     width: 100%;
     max-width: 600px;
     padding: 70% 1px;
   }
 
-  .tercera_parte {
-    background-color: #000000;
-    width: 100%;
-    height: 950px;
-    display: flex;
-    color: white;
-    justify-content: center;
-  }
   .proyectos {
     width: 100%;
     gap: 1%;
@@ -693,15 +680,6 @@ span {
     text-align: center;
   }
   */
-
-  .tercer_titulo {
-    margin-top: 5%;
-    display: flex;
-    justify-content: center;
-    font-size: 40px;
-
-    text-shadow: rgb(0, 0, 0) 0 4px;
-  }
 }
 @media (min-width: 860px) and (max-width: 900px) {
   .home {
@@ -848,24 +826,12 @@ span {
     transform: translate(-50%, -50%);
   }
 
-  .tercera_parte {
-    width: 100%;
-    height: 849px;
-  }
   .skills {
     width: 100%;
     max-width: 600px;
     padding: 70% 1px;
   }
 
-  .tercera_parte {
-    background-color: #000000;
-    width: 100%;
-    height: 950px;
-    display: flex;
-    color: white;
-    justify-content: center;
-  }
   .proyectos {
     width: 100%;
     gap: 1%;
